# dublin-rent-price-estimator

./: .gitignore  README.md
src/backend/: .env  Dockerfile  alembic.ini  apprunner.yaml  docker-compose.yml  main.py  pyproject.toml  routes.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 34e46ff1e8e3_initial_migration.py  dc637d2855d9_create_search_history_table.py
src/backend/app/: auth.py  main.py  routes.py  schemas.py
src/backend/app/data/: train_property.csv  train_shared.csv
src/backend/app/data/daft_scraper/: daft_dublin_rent_data.csv  daft_scraper.py  utils.py
src/backend/app/db/: models.py  session.py
src/backend/app/models/: __init__.py  data_processors.py  predictors.py
src/backend/app/models/saved_data/: property_feature_names.json  property_model_metrics.json  shared_feature_names.json  (+1 more)
src/backend/data/: daft_scraper.py  data.csv  merge_datasets.py  rent_ie_scraper.py  scraper.py  train.csv  train_shared.csv
src/backend/data/daft_scraper/: daft_scraper.py  data.csv  data_sharing.csv  utils.py
src/backend/models/: __init__.py  data_processor.py  data_processors.py  dublin_area_encoder.joblib  feature_importances.json  feature_names.json  predictors.py  property_type_encoder.joblib  rent_predictor_model.joblib  rental_price_predictor.py
src/backend/models/saved_data/: model_metrics.json  shared_model_metrics.json
src/backend/notebook/: README_NOTEBOOK.md  dublin_rent_predictor_notebook.ipynb
src/backend/notebook/notebook_models/: feature_importance.json  model_metrics.json
src/backend/saved_data/: model_metrics.json
(+18 files in other folders)
